# CppUMockGen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MANUAL.md  README.md  appveyor.yml
app/: CMakeLists.txt  CPackGen.cmake  InstallersSetup.cmake
app/include/: CppUMockGen.h  CppUMockGen.hpp
app/sources/: App.cpp  App.hpp  ClangHelper.cpp  ClangHelper.hpp  Config.cpp  Config.hpp  ConfigFile.cpp  ConfigFile.hpp  ConsoleColorizer.cpp  ConsoleColorizer.hpp  Constructor.cpp  Constructor.hpp  Destructor.cpp  Destructor.hpp  FileHelper.cpp  FileHelper.hpp  Function.cpp  Function.hpp  Method.cpp  Method.hpp  MockGenerator.cpp  MockGenerator.hpp  Options.cpp  Options.hpp  OutputFileParser.cpp  OutputFileParser.hpp  Parser.cpp  Parser.hpp  StringHelper.cpp  StringHelper.hpp  main.cpp
ci/: appveyor_ci_after_test.ps1  appveyor_ci_build.ps1  appveyor_ci_install_codecov_linux.sh  appveyor_ci_install_cpputest.ps1  appveyor_ci_install_cpputest_linux.ps1  appveyor_ci_install_cpputest_win.ps1  appveyor_ci_install_lcov.ps1  appveyor_ci_install_lcov_linux.ps1  appveyor_ci_test.ps1  appveyor_helpers.ps1  tdm-gcc-64.9.2.0.nupkg
cmake/: VSHelper.cmake  VersionInfo.h.in  VersionInfo.in.h  VersionResource.in.h  VersionResource.rc  generate_product_version.cmake
cmake/Modules/: DebianPackage.cmake  FindCppUTest.cmake  FindLCOV.cmake  FindLibClang.cmake  Findlcov.cmake  GenerateProductVersion.cmake  NSIS.template.in
cmake/Modules/DebianPackage/: GenerateDebianPackage.in.cmake
cmake/Modules/DebianPackage/debian/: changelog.in  control.in  copyright.in  rules.in
debian/: copyright  package_description
test/: CMakeLists.txt  CommonTestTargets.cmake  GenerateTest.cmake  TestMain.cpp
test/App/: App_test.cpp  CMakeLists.txt  VersionInfo.h
test/ClangTestHelper/: ClangTestHelper.cpp  ClangTestHelper.hpp
test/Config/: CMakeLists.txt  Config_test.cpp
test/ConfigFile/: CMakeLists.txt  ConfigFile_test.cpp
test/Constructor_Expectation/: CMakeLists.txt  Constructor_Expectation_test.cpp
test/Constructor_Mock/: CMakeLists.txt  Constructor_Mock_test.cpp
test/Destructor_Expectation/: CMakeLists.txt  Destructor_Expectation_test.cpp
test/Destructor_Mock/: CMakeLists.txt  Destructor_Mock_test.cpp
test/Expectations/: Config_expect.cpp  Config_expect.hpp  ConsoleColorizer_expect.cpp  ConsoleColorizer_expect.hpp  Constructor_expect.cpp  Constructor_expect.hpp  Destructor_expect.cpp  Destructor_expect.hpp  Function_expect.cpp  Function_expect.hpp  Method_expect.cpp  Method_expect.hpp  Options_expect.cpp  Options_expect.hpp  OutputFileParser_expect.cpp  OutputFileParser_expect.hpp  Parser_expect.cpp  Parser_expect.hpp
test/Function/: CMakeLists.txt  CppUGenMock UTs.xlsx  Function_test.cpp  ~$CppUGenMock UTs.xlsx
test/Function_C/: CMakeLists.txt
test/Function_CPP/: CMakeLists.txt  CppUGenMock UTs.xlsx  Function_test.cpp
test/Function_Expectation_C/: CMakeLists.txt
test/Function_Expectation_CPP/: CMakeLists.txt  Function_Expectation_test.cpp
test/Function_Mock_C/: CMakeLists.txt
test/Function_Mock_CPP/: CMakeLists.txt  CppUGenMock UTs.xlsx  Function_Mock_test.cpp
test/Method/: CMakeLists.txt  Method_test.cpp
test/Method_Expectation/: CMakeLists.txt  Method_Expectation_test.cpp
test/Method_Mock/: CMakeLists.txt  Method_Mock_test.cpp
test/MockGenerator/: CMakeLists.txt  MockGenerator_test.cpp  VersionInfo.h
test/Mocks/: Config_mock.cpp  ConsoleColorizer_mock.cpp  Constructor_mock.cpp  Destructor_mock.cpp  Function_mock.cpp  Method_mock.cpp  MockGenerator_mock.cpp  Options_mock.cpp  OutputFileParser_mock.cpp  Parser_mock.cpp
test/Options/: CMakeLists.txt  Options_test.cpp  VersionInfo.h
test/OutputFileParser/: CMakeLists.txt  OutputFileParser_test.cpp
test/Parser/: CMakeLists.txt  Parser_test.cpp  VersionInfo.h
test/TestHelpers/: ClangCompileHelper.cpp  ClangCompileHelper.hpp  ClangParseHelper.cpp  ClangParseHelper.hpp  Subtest.hpp
